Falta:
Poner que solo se puedan dibujar las casillas indicadas,
poner los usos, hacer el turno de 2 y
poner la condicion para que termine